------------------------------------------------------------------------------------

>>> NOTICE!!! <<<

This file contains SPOILERS, which might ruin your IVAN experience totally. The file
is also provided AS IS and is probably completely unreadable.

------------------------------------------------------------------------------------

February 5 2003 Timo Kiviluoto <sonor@phpoint.fi>

	* Removed the silly console window from the MinGW port
	* Reduced floating eyes' effect a bit to reduce the possibility of insta deaths

February 4 2003 Timo Kiviluoto <sonor@phpoint.fi>

	* FeLib interface is finally OS independent
	* Ivan now compiles on MinGW and DJGPP environments correctly
	* Ctrl + Print Screen now takes a screenshot in the DOS port
	* Print Screen works again correctly in both Win32 ports
	* Ctrl + Alt + E is now interpreted as a euro symbol in all SDL ports
	* Corrected many bugs in game::HandleQuitMessage()
	* Many new files added to Doc/Obsolete and Doc/Work

February 2 2003 Timo Kiviluoto <sonor@phpoint.fi>

	* Hitting a non-polymorphed chameleon no longer crashes

February 2 2003 Timo Kiviluoto <sonor@phpoint.fi>

	* Corrected an abusable bug in the item polymorph code
	* Polypiling may no longer create scrolls of charging
	* Wands of polymorph may no longer be cloned
	* Being satiated no longer abuses agility, since even the minimum effect was way
	  too strong; however, bloated and overfed effects remain unchanged
	* Bone now spoils slower
	* Disabled Mondedr
	* The library is now better protected
	* Experiment ZQ-29 and blood golems no longer appears in the golem room
	* Added ConsumeWisdomLimit material database value which prevents monsters with
	  enough wisdom to avoid eating the specified material (this replaces the
	  IsBadFoodForAI value)
	* Monsters with >= 10 wisdom will not attack a floating eye anymore
	* Monsters with >= 15 wisdom will not wear rings of teleport/polymorph
	* Elpuri can no longer faint