@@ -872,6 +872,11 @@ bool key::Apply(character* User)
 {
   if(User->IsPlayer())
     {
+      if(!User->CanOpen())
+	{
+	  ADD_MESSAGE("This monster type cannot use keys.");
+	  return false;
+	}
       uchar Dir = game::DirectionQuestion("What door do you wish to lock or unlock? [press a direction key]", false, true);
 
       if(Dir == DIR_ERROR)
